# vkHello

./: .gitignore  build-profile.json5  log.txt
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/: syscap.json
entry/src/main/cpp/: CMakeLists.txt  init.cpp  napi_init.cpp  render.cpp  vk.cpp
entry/src/main/cpp/shaders/: README.md  shader.frag
entry/src/main/cpp/shaders/complied/: vert.spv
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/rawfile/: frag.spv  squid.json
hvigor/: hvigor-config.json5
